--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
           <h1>Intelligent scroll naviation</h1>
-          <p>This page has fixed navigation which intelligently updates on scroll! 
+          <p>This page has fixed navigation which intelligently updates on scroll! </p>
         </div>
       </div>      
     </div>
