Add return to top link to footer

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
+        <div class="large-12 cell"><a id="top" name="top"></a>
           <h1>Intelligent scroll naviation</h1>
-          <p>This page has fixed navigation which intelligently updates on scroll! </p>
+          <p>This page has fixed navigation which intelligently updates on scroll!</p>
         </div>
       </div>      
     </div>
@@ -75,6 +75,7 @@
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
           <h1>Footer</h1>
+          <p><a href="#top" class="back-to-top">Back to top</a></p>
         </div>
       </div>      
     </div>
