Add google fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Intelligent scroll navigation</title>
     <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css">
+    <link href="https://fonts.googleapis.com/css?family=Sarabun" rel="stylesheet">
   </head>
   <body>
     
